# Template_CPP_Project

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindGcov.cmake  FindLcov.cmake  Findcodecov.cmake  llvm-cov-wrapper
include/: my_math.hpp
scripts/: configurate.sh  coverage.sh  duplication.sh  tests.sh  valgrind.sh
sources/: main.cpp  math.cpp
tests/: test.cpp
